Trying to make GSP rendering behave and not fill up PermGen space