@@ -4,6 +4,9 @@ grails.project.test.reports.dir = "target/test-reports"
 grails.project.target.level = 1.6
 //grails.project.war.file = "target/${appName}-${appVersion}.war"
 
+grails.tomcat.jvmArgs = ["-Djava.awt.headless=true", "-Xms128m", "-Xmx128m", "-XX:PermSize=128m", "-XX:MaxPermSize=128m"]
+grails.tomcat.nio = true
+
 grails.project.dependency.resolution = {
     // inherit Grails' default dependencies
     inherits("global") {
@@ -14,8 +17,6 @@ grails.project.dependency.resolution = {
     repositories {
         grailsHome()
         grailsCentral()
-        //mavenCentral()
-        //mavenLocal()
     }
     dependencies {
     }
@@ -27,12 +28,7 @@ grails.project.dependency.resolution = {
         runtime(":hibernate:$grailsVersion") {
             export = false
         }
-        runtime ":resources:1.2.RC2"
-        runtime ":fields:1.3"
-//        runtime ":jquery:1.8.3"
-//        runtime ":ckeditor:3.6.3.0"
-//        runtime(":twitter-bootstrap:2.2.2") {
-//            excludes 'resources'
-//        }
+        //runtime ":resources:1.2.RC2"
+        //runtime ":fields:1.3"
     }
 }
